--- a/UsedItemDonationSystem/style_forms.css
+++ b/UsedItemDonationSystem/style_forms.css
@@ -154,21 +154,22 @@ input[type=text],input[type=email],input[type=password],input[type=tel]{ /*textb
 
 textarea{/*comment textbox*/
     width: 100%;
-    padding: 11px 0px;
+    padding: 11px 10px;
     border: 1px solid black;
     border-radius: 11px;
 }
 
-input[type=button]{ /*button sizing etc*/
-    width: 32%;
+button{
+    width: 30%;
     padding: 6px 25px;
     text-align: center;
-    background-color: yellowgreen;
-    border-radius: 17px;
+    border-radius: 15px;
     cursor: pointer;
+    border: none;
+    background-color: yellowgreen;
 }
 
-input[type=button]:hover{/*button when hover*/
+button:hover{
     box-shadow: 1px 2px 1px black;
 }
 
